--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@mapbox/polyline": "^1.1.1",
     "dotenv": "^16.0.3",
     "expo": "~47.0.12",
+    "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
     "react": "18.1.0",
     "react-native": "0.70.5",
-    "react-native-maps": "^1.4.0"
+    "react-native-geolocation-service": "^5.3.1",
+    "react-native-maps": "^1.4.0",
+    "react-native-permissions": "^3.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
