--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-geolocation-service": "^5.3.1",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.4.0",
-    "react-native-permissions": "^3.6.1"
+    "react-native-permissions": "^3.6.1",
+    "expo-constants": "~14.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
