--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
     "@mapbox/polyline": "^1.1.1",
     "dotenv": "^16.0.3",
     "expo": "~47.0.12",
+    "expo-constants": "~14.0.2",
     "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
+    "install": "^0.13.0",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.4.0",
-    "react-native-permissions": "^3.6.1",
-    "expo-constants": "~14.0.2"
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-permissions": "^3.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
