--- a/package.json
+++ b/package.json
@@ -6,9 +6,23 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native-permissions|react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg)"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
+    "setupFiles": [
+      "./jest-setup.js"
+    ]
   },
   "dependencies": {
+    "@googlemaps/jest-mocks": "^2.10.0",
     "@mapbox/polyline": "^1.1.1",
     "dotenv": "^16.0.3",
     "expo": "~47.0.12",
@@ -16,16 +30,21 @@
     "expo-location": "^15.0.1",
     "expo-status-bar": "~1.4.2",
     "install": "^0.13.0",
+    "jest": "^26.6.3",
+    "jest-expo": "^48.0.1",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-maps": "^1.4.0",
     "react-native-maps-directions": "^1.9.0",
-    "react-native-permissions": "^3.6.1"
+    "react-native-permissions": "^3.6.1",
+    "react-test-renderer": "^18.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@testing-library/jest-native": "^5.4.2",
+    "@testing-library/react-native": "^12.0.0-rc.0",
     "metro-react-native-babel-preset": "^0.75.0",
     "react-native-dotenv": "^3.4.7"
   },
